让 1.20.1 分支具备 ParaTranz 拉取和翻译应用能力
移植项目列表、项目名补全、artifact 下载缓存、语言覆盖、状态反馈、告示牌直写文本翻译与单元检查；保留 旧版 networking 与 SignRenderer 兼容层。

Constraint: Minecraft 1.20.1 使用 Java 17 和对应 Fabric API 版本。
Rejected: 单仓多目录矩阵 | 用户要求每版本一个远端分支。
Confidence: high
Scope-risk: moderate
Directive: 后续修改不得提交本地日志、构建产物或调试配置。
Tested: .\gradlew-java17.bat build --stacktrace --console=plain --no-daemon；git diff --check；提交前禁词扫描。
Not-tested: 未自动启动 Minecraft 客户端；未运行需要 PARATRANZ_TOKEN 的 live smoke。